--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@tanstack/react-query": "^5.90.10",
     "@vercel/postgres": "^0.10.0",
     "clsx": "^2.1.1",
+    "input": "^1.0.1",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-resizable-panels": "^3.0.6",
     "tailwind-merge": "^3.4.0",
+    "telegram": "^2.26.22",
     "viem": "^2.39.3",
     "wagmi": "^2.19.5"
   },
